--- a/oop_game-v2/css/styles.css
+++ b/oop_game-v2/css/styles.css
@@ -80,6 +80,7 @@ button {
 }
 
 #phrase ul li{
+  
   margin-top: 15px;
 }
 
@@ -98,7 +99,7 @@ button {
   width: 65px;
   padding: 20px 1px 0 1px;
   margin-right: 2px;
-  color: transparent;
+  color: red;
   background: var(--color-neutral-light);
   border-radius: 5px;
 }
